# systemonomic-mcp

./: LICENSE  README.md  pyproject.toml
.mcp/: server.json
src/systemonomic_mcp/: __init__.py  atss_server.py  client.py  org_server.py  wda_server.py
