[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "systemonomic-mcp"
version = "0.1.1"
description = "MCP servers for Systemonomic — Work Domain Analysis, ATSS, and Org Design"
readme = "README.md"
requires-python = ">=3.10"
license = "LicenseRef-Proprietary"
authors = [
    { name = "Systemonomic", email = "support@systemonomic.com" },
]
keywords = ["mcp", "ai", "work-domain-analysis", "cognitive-work-analysis", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://systemonomic.com"
Documentation = "https://github.com/TonyC23/cwa/tree/main/mcp"
Repository = "https://github.com/TonyC23/cwa"

[project.scripts]
systemonomic-wda = "systemonomic_mcp.wda_server:main"
systemonomic-atss = "systemonomic_mcp.atss_server:main"
systemonomic-org = "systemonomic_mcp.org_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/systemonomic_mcp"]
